tests/cmp/neg-dc-label-parsing-01.golden
Parse Error:
tests/cmp/neg-dc-label-parsing-01.trp:2:33 unexpected token TokenSym "bob"
